--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "typo3/cms-core": "^11.5"
   },
   "suggest": {
-    "georgringer/news": "^9.0"
+    "georgringer/news": "^9.0",
+    "nitsan/ns-news-comments": "5.0"
   },
   "autoload": {
     "psr-4": {
