--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -8,3 +8,6 @@ services:
   SvenLie\WordpressMigrate\:
     resource: '../Classes/*'
     exclude: '../Classes/Domain/Model/*'
+
+  Nitsan\NsNewsComments\Domain\Repository\CommentRepository:
+    public: true
